--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,15 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     display: flex;
     flex-direction: column;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
 header, footer{
     display: flex;
@@ -16,12 +21,14 @@ header, footer{
     color: white;
 }
 header{
-    height: 4vh;
+    min-height: 4vh;
+    margin-bottom: 25px;
 }
 .root{
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 80vh;
 }
 form{
     display: flex;
@@ -30,4 +37,39 @@ form{
 }
 label{
     margin-bottom: 1vh;
+}
+.btn{
+    padding: 0.3vh;
+    margin-block: 0.3vh;
+    background-color: rgb(38, 16, 0);
+    color: white;
+    text-align: center;
+    border: 1px black solid;
+    border-radius: 9px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.catalogBox{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-block: 25px;
+}
+.blockItem{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    border: 2px #000 solid;
+    border-radius: 0px 0px 7px 7px;
+    padding-bottom: 5px;
+    margin-bottom: 3vh;
+}
+.imgItem{
+    width: 150px;
+    height: 150px;
+}
+.infoItem{
+    padding: 2px;
 }
