--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,9 @@
 body{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-height: 375px;
 }
 a{
     text-decoration: none;
@@ -92,4 +95,9 @@ label{
 .filterBlock{
     float: top;
     width: 30%;
+}
+.container{
+    padding-block: 4vh;
+    height: 100%;
+    min-height: 350px;
 }
