--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,3 +101,8 @@ label{
     height: 100%;
     min-height: 350px;
 }
+.contentProfil{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
